--- a/server/.goreleaser.yml
+++ b/server/.goreleaser.yml
@@ -17,6 +17,7 @@ builds:
       - CGO_ENABLED=0
 archives:
   - format: binary
+    name_template: "{{ .ProjectName }}-server_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     replacements:
       darwin: Darwin
       linux: Linux
