--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,7 +2,24 @@ before:
   hooks:
     - go mod download
 builds:
-  - goos:
+  - id: server
+    dir: server
+    goos:
+      - linux
+      - darwin
+      - windows
+    goarch:
+      - amd64
+    ldflags:
+      - -s -w
+      - -X main.version={{.Version}}
+      - -X main.commit={{.ShortCommit}}
+      - -X main.date={{.Date}}
+    env:
+      - CGO_ENABLED=0
+  - id: client
+    dir: client
+    goos:
       - linux
       - darwin
       - windows
@@ -16,32 +33,20 @@ builds:
     env:
       - CGO_ENABLED=0
 archives:
-  - id: server
-    dir: server
-    format: binary
-    name_template: "{{ .ProjectName }}-server_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+  - name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     replacements:
       darwin: Darwin
       linux: Linux
       windows: Windows
       386: i386
       amd64: x86_64
+    format: tar.gz
     format_overrides:
       - goos: windows
         format: zip
-  - id: client
-    dir: client
-    format: binary
-    name_template: "{{ .ProjectName }}-client_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
-    replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
-    format_overrides:
-      - goos: windows
-        format: zip
+    files:
+      - server/server
+      - client/client
 checksum:
   name_template: checksums.txt
 snapshot:
