--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,10 +11,13 @@ jobs:
         uses: actions/checkout@v3
       - name: Unshallow
         run: git fetch --prune --unshallow
+      - name: Get go version from .tool-versions
+        id: goversion
+        run: echo goversion=$(grep '^golang ' .tool-versions | awk '{print $2}') >> $GITHUB_OUTPUT
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.20.2
+          go-version: ${{ steps.goversion.outputs.goversion }}
       - name: Run GoReleaser server
         uses: goreleaser/goreleaser-action@v4
         with:
